test/spec/block.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/block.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/block.wast:133:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-i32 (result i32) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:133:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-i32 (result i32) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:137:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-i64 (result i64) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:137:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-i64 (result i64) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:141:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-f32 (result f32) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:141:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-f32 (result f32) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:145:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-f64 (result f64) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:145:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-f64 (result f64) (block)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:151:6: type stack at end of block is 1. expected 0
    (block (i32.const 1))
     ^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:156:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-value-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:156:11: type stack at end of function is 0. expected 1
  (module (func $type-value-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:163:6: type stack at end of block is 1. expected 0
    (block (f32.const 0))
     ^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:162:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-value-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:162:11: type stack at end of function is 0. expected 1
  (module (func $type-value-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:203:17: type stack size too small at br value. got 0, expected at least 1
    (block i32 (br 0))
                ^^^^
assert_invalid error:
  third_party/testsuite/block.wast:209:17: type stack size too small at br value. got 0, expected at least 1
    (block i32 (br 0) (i32.const 1))
                ^^^^
assert_invalid error:
  third_party/testsuite/block.wast:215:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:215:11: type stack at end of function is 0. expected 1
  (module (func $type-break-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:221:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:221:11: type stack at end of function is 0. expected 1
  (module (func $type-break-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:227:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-first-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:227:11: type stack at end of function is 0. expected 1
  (module (func $type-break-first-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:233:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-first-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:233:11: type stack at end of function is 0. expected 1
  (module (func $type-break-first-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:240:11: type stack at end of function is 1. expected 0
  (module (func $type-break-nested-num-vs-void
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:246:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-nested-empty-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:246:11: type stack at end of function is 0. expected 1
  (module (func $type-break-nested-empty-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:253:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-nested-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:253:11: type stack at end of function is 0. expected 1
  (module (func $type-break-nested-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:259:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-break-nested-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:259:11: type stack at end of function is 0. expected 1
  (module (func $type-break-nested-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:267:6: type stack size too small at i32.ctz. got 0, expected at least 1
    (i32.ctz (block (br 0)))
     ^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:274:6: type stack size too small at i64.ctz. got 0, expected at least 1
    (i64.ctz (block (br 0 (nop))))
     ^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:273:11: type mismatch at function. got i64, expected i32
  (module (func $type-break-operand-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:280:6: type stack size too small at i64.ctz. got 0, expected at least 1
    (i64.ctz (block (br 0 (i64.const 9))))
     ^^^^^^^
assert_invalid error:
  third_party/testsuite/block.wast:279:11: type mismatch at function. got i64, expected i32
  (module (func $type-break-operand-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14/14 tests passed.
;;; STDOUT ;;)
